--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-tensorrt>=10.0.1
+tensorrt==10.13.3.9
+tensorrt-cu12==10.13.3.9
+tensorrt-cu12-libs==10.13.3.9
+tensorrt-cu12-bindings==10.13.3.9
+onnx>=1.16.0
 onnx!=1.16.2
+
